--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-Enter first name:<input type="text" id="firstname"/><br><br>
-Enter last name:<input type="text" id="lastname"/><br><br>
-<input type="submit" value="Submit"/><br>
-  <script>
-function formdata() 
-{
-var firstname1= document.getElementById("firstname").value;
-var lastname1= document.getElementById("lastname").value;
-document.writeln("<h1>Confirmation Page</h1><br>");
-document.writeln("Thank you for completing this form.<br><br>");
-document.writeln("The first name you entered is " + firstname + "<br>");
-document.writeln("The last name you entered is " + lastname);
-}
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
 </script>
 </body>
 </html>
