--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+<p id="demo">JavaScript can change HTML content.</p>
 
-<p id="demo"></p>
-</script>
+<button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello JavaScript!'">Click Me!</button>
 </body>
 </html>
