--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p id="demo">JavaScript can change HTML content.</p>
+<p id="demo"></p>
 
-<button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello JavaScript!'">Click Me!</button>
+<script>
+document.getElementById("demo").innerHTML = "My First JavaScript";
+</script>
 </body>
 </html>
