--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p id="demo"></p>
-
-<script>
-document.getElementById("demo").innerHTML = "My First JavaScript";
+<form><br>
+Enter your First Name: <input type="text" id="firstname"/><br><br>
+Enter your Last Name: <input type="text" id="lastname"/><br><br>
+<input type="submit" value="Submit" onclick="formdata()"/><br>
+  <script>
+function formdata() 
+{
+var firstname1= document.getElementById("firstname").value;
+var lastname1= document.getElementById("lastname").value;
+document.writeln("<h1>Confirmation Page</h1><br>");
+document.writeln("Thank you for completing this form.<br><br>");
+document.writeln("The first name you entered is " + firstname + "<br>");
+document.writeln("The last name you entered is " + lastname);
+}
 </script>
+</form>
 </body>
 </html>
