--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ var firstname1= document.getElementById("firstname").value;
 var lastname1= document.getElementById("lastname").value;
 document.writeln("<h1>Confirmation Page</h1><br>");
 document.writeln("Thank you for completing this form.<br><br>");
-document.writeln("The first name you entered is " + firstname + "<br>");
-document.writeln("The last name you entered is " + lastname);
+document.writeln("The first name you entered is " + firstname1 + "<br>");
+document.writeln("The last name you entered is " + lastname1);
 }
 </script>
 </form>
