--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ function formdata()
 {
 var data = JSON.stringify(JSON.parse(atob(document.getElementById("data").value)), null, 4);
 document.writeln("<h1>Result Page</h1><br>");
-document.writeln("<pre">" + data + "</pre>");
+document.writeln("<pre>" + data + "</pre>");
 }
 </script>
 </form>
