--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Enter the data: <input type="text" id="data"/><br><br>
   <script>
 function formdata() 
 {
-var data = JSON.stringify(atob(document.getElementById("data").value), null, 4);
+var data = JSON.stringify(JSON.parse(atob(document.getElementById("data").value)), null, 4);
 document.writeln("<h1>Result Page</h1><br>");
 document.writeln("<pre>" + data + "</pre>");
 }
