--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <form><br>
 Enter the data: <input type="text" id="data"/><br><br>
 <input type="submit" value="Submit" onclick="formdata()"/><br>
-  <script>
+<script>
 function formdata() 
 {
 var data = JSON.stringify(JSON.parse(atob(document.getElementById("data").value)), null, 4);
 document.writeln("<h1>Result Page</h1><br>");
 document.writeln("<pre>" + data + "</pre>");
+document.close();
 }
 </script>
 </form>
