--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ Enter the raw data: <input type="text" id="data"/><br><br>
 <script>
 function formdata() 
 {
-var data = JSON.stringify(JSON.parse(document.getElementById("data").value), null, 4);
+var data = JSON.parse (document.getElementById("data").value);
+var datastring = JSON.stringify(data, null, 4);
 document.writeln("<h1>Result Page</h1><br>");
-document.writeln("<pre>" + data + "</pre>");
+document.writeln("<pre>" + datastring + "</pre>");
 document.close();
 }
 </script>
