--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ var data = JSON.parse (document.getElementById("data").value);
 var lmd = data.stock.G-4-1;
 var datastring = JSON.stringify(data, null, 4);
 document.writeln("<h1>Result Page</h1><br>");
-document.writeln("LMD: " + lmd);
-document.writeln("<p>Raw Data<br>");
+document.writeln("LMD: ");
+document.writeln("<h1>Raw Data<br>");
 document.writeln("<pre>" + datastring + "</pre>");
 document.close();
 }
