--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var lmd = data.stock.G-4-1;
 var datastring = JSON.stringify(data, null, 4);
 document.writeln("<h1>Result Page</h1><br>");
 document.writeln("LMD: " + lmd);
-document.writeln("<h1>Raw Data<br>");
+document.writeln("<h1>Raw Data</h1><br>");
 document.writeln("<pre>" + datastring + "</pre>");
 document.close();
 }
