--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ function formdata()
 var data = JSON.parse(document.getElementById("data").value);
 var lmd = data.stock["G-4-1"];
 var datastring = JSON.stringify(data, null, 4);
-document.writeln("<h1>Result Page<br>");
+document.writeln("<h1>Result Page</h1>");
 document.writeln("LMD: " + lmd);
 document.writeln("<h1>Raw Data</h1>");
 document.writeln("<pre>" + datastring + "</pre>");
